--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "element-plus": "^2.2.16",
     "pinia": "^2.0.21",
     "vue": "^3.2.38",
+    "vue-i18n": "^9.2.2",
     "vue-router": "^4.1.5"
   },
   "devDependencies": {
