--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@vueuse/core": "^9.2.0",
     "element-plus": "^2.2.16",
     "pinia": "^2.0.21",
+    "terser": "^5.15.1",
     "vue": "^3.2.38",
     "vue-i18n": "^9.2.2",
     "vue-router": "^4.1.5"
