--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,10 +8,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
-    - name: pnpm install
-      run: pnpm install
-    - name: npm run build
-      run: npm run build
+    - name: get env
+      run: |
+        npm install pnpm -g
+        pnpm install
+        npm run build
     - name: Deploy
       uses: cross-the-world/scp-pipeline@master
       with:
