--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "preview": "vite preview --port 4173"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.0.10",
     "@vueuse/core": "^9.2.0",
+    "axios": "^1.1.3",
     "element-plus": "^2.2.16",
     "pinia": "^2.0.21",
     "terser": "^5.15.1",
