--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,7 +12,7 @@ jobs:
       run: |
         npm install pnpm -g
         pnpm install
-        npm run build
+        pnpm run build
     - name: Deploy
       uses: cross-the-world/scp-pipeline@master
       with:
