--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^1.1.3",
     "echarts": "^5.4.0",
     "element-plus": "^2.2.16",
+    "openai": "^3.1.0",
     "pinia": "^2.0.21",
     "terser": "^5.15.1",
     "vue": "^3.2.38",
